--- a/pom.xml
+++ b/pom.xml
@@ -6,9 +6,11 @@
 
   <properties>
 	<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-	<maven.compiler.release>11</maven.compiler.release>
-	<maven.compiler.target>11</maven.compiler.target>
-	<maven.compiler.source>11</maven.compiler.source>
+	<java.version>14</java.version>
+	<maven.compiler.version>3.8.1</maven.compiler.version>
+	<maven.compiler.release>${java.version}</maven.compiler.release>
+	<maven.compiler.target>${java.version}</maven.compiler.target>
+	<maven.compiler.source>${java.version}</maven.compiler.source>
 	<cucumber.version>6.10.4</cucumber.version>
 	<selenium.version>4.1.0</selenium.version>
 	<sonarqube.version>3.9.1.2184</sonarqube.version>
@@ -17,6 +19,7 @@
   </properties>
   
   <dependencies>
+
 	<!-- https://mvnrepository.com/artifact/io.cucumber/cucumber-java -->
 	<!-- This brings in our given, when, then annotations -->
 	<dependency>
@@ -63,34 +66,40 @@
   </dependencies>
 
   <build>
-    <plugins>
-      <plugin>
-        <groupId>org.jacoco</groupId>
-	    <artifactId>jacoco-maven-plugin</artifactId>
-	    <version>${jacoco.version}</version>
-  	    <executions>
-  	      <execution>
-	        <goals>
-	          <goal>prepare-agent</goal>
-	        </goals>
-	      </execution>
-	      <!-- attached to Maven test phase -->
-	      <execution>
-	        <id>report</id>
-	        <phase>package</phase>
-	        <goals>
-	          <goal>report</goal>
-	        </goals>
-             <!-- default target/jscoco/site/* -->
-             <configuration>
-                 <outputDirectory>
-                     target/jacoco-report
-                 </outputDirectory>
-             </configuration>
-          </execution>
-        </executions>
-      </plugin>
-    </plugins>
+	<pluginManagement>
+      <plugins>
+        <plugin>
+          <groupId>org.apache.maven.plugins</groupId>
+          <artifactId>maven-compiler-plugin</artifactId>
+          <version>${maven.compiler.version}</version>
+        </plugin>
+
+        <plugin>
+          <groupId>org.jacoco</groupId>
+	      <artifactId>jacoco-maven-plugin</artifactId>
+	      <version>${jacoco.version}</version>
+  	      <executions>
+  	        <execution>
+	          <goals>
+	            <goal>prepare-agent</goal>
+	          </goals>
+	        </execution>
+	        <!-- attached to Maven test phase -->
+	        <execution>
+	          <id>report</id>
+	          <phase>package</phase>
+	          <goals>
+	            <goal>report</goal>
+	          </goals>
+              <!-- default target/jscoco/site/* -->
+              <configuration>
+                <outputDirectory>target/jacoco-report</outputDirectory>
+              </configuration>
+            </execution>
+          </executions>
+        </plugin>
+      </plugins>
+    </pluginManagement>
   </build>
 
   <profiles>
