--- a/pom.xml
+++ b/pom.xml
@@ -98,6 +98,33 @@
             </execution>
           </executions>
         </plugin>
+
+		<plugin>
+	      <groupId>org.apache.maven.plugins</groupId>
+	      <artifactId>maven-surefire-plugin</artifactId>
+	      <configuration>
+	        <excludes>
+	          <exclude>**/*Test.java</exclude>
+	        </excludes>
+	      </configuration>
+	      <executions>
+	        <execution>
+	          <id>integration-test</id>
+	          <goals>
+	            <goal>test</goal>
+	          </goals>
+	          <phase>integration-test</phase>
+	          <configuration>
+	            <excludes>
+	              <exclude>none</exclude>
+	            </excludes>
+	            <includes>
+	              <include>**/*CucumberSeleniumTestRunner.java</include>
+	            </includes>
+	          </configuration>
+	        </execution>
+	      </executions>
+	    </plugin>
       </plugins>
     </pluginManagement>
   </build>
